--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Comfortaa|Righteous');
 
 body {
-  background: url(https://images.clipartlogo.com/files/istock/previews/8741/87414357-apple-seamless-pastel-colors-pattern-fruits-texture-background.jpg);
+  background: url(https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/pile-of-ripe-fresh-green-pears-royalty-free-image-133810495-1564414665.jpg);
   margin: 0;
   font-family: 'Comfortaa', cursive;
 }
@@ -11,7 +11,7 @@ h1 {
   background: antiquewhite;
   margin:0;
   margin-bottom: .5em;
-  padding: 1em;
+  padding: .5em;
   text-align: center;
 }
 
@@ -20,7 +20,10 @@ a {
   text-decoration: none;
   text-shadow: 1px 1px 1px black;
   font-size: 1.5em;
-  background: rgba(193, 235, 187, .9);
+  background: rgba(53, 220, 27, 0.9);
+  padding-left: 2rem;
+  padding-right: 2rem;
+  margin: 1rem;
 }
 
 a:hover {
@@ -32,7 +35,7 @@ li {
 }
 
 li a {
-  color: mediumseagreen;
+  color: brown;
 }
 
 input[type=text] {
@@ -45,4 +48,9 @@ input[type=submit] {
   background: mediumseagreen;
   font-size: 1em;
   border-radius: 10%;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
 }
